# bem

./: CMakeLists.txt  README.md
common/: CMakeLists.txt  byteBuffer.cpp
common/src/: baseMessage.cpp  baseMessage.h  byteBuffer.cpp  byteBuffer.h  game.cpp  game.h  gamelist.cpp  gamelist.h  helloMessage.cpp  helloMessage.h  invalidMessage.cpp  invalidMessage.h  json.hpp  messageFactory.cpp  messageFactory.h  messages.h  pingMessage.cpp  pingMessage.h  pongMessage.cpp  pongMessage.h  readyMessage.cpp  readyMessage.h  result.cpp  result.h  resultMessage.cpp  resultMessage.h  task.cpp  task.h  taskMessage.cpp  taskMessage.h  taskNotifyMessage.cpp  taskNotifyMessage.h
config/: coordinator.json  node.json
coordinator/: CMakeLists.txt  accept.cpp  accept.h  baseMessage.h  byteBuffer.cpp  byteBuffer.h  main.cpp  message.h  node.cpp  node.h  readNode.cpp  readNode.h  state.h  task.cpp  task.h  taskMessage.cpp  taskMessage.h  writeNode.cpp
coordinator/src/: accept.cpp  commands.cpp  commands.h  config.cpp  config.h  handler.cpp  handler.h  main.cpp  maintenance.cpp  maintenance.h  node.cpp  node.h  readNode.cpp  state.h  writeNode.cpp  writeNode.h
games/: launch_game.sh  mock_launcher.sh
games/migration/: AlfaBetaPlayer.sh  MCTSPlayer.sh
node/: CMakeLists.txt  main.cpp  state.cpp  state.h
node/src/: communication.cpp  communication.h  config.cpp  config.h  execute.cpp  execute.h  graceful.cpp  graceful.h  main.cpp  protocol.cpp  protocol.h  read.cpp  read.h  state.cpp  state.h  write.cpp  write.h
